aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__sub__tests__sub_lit_reg_var.snap
---
source: aya-assembly/src/parser/instructions/sub.rs
expression: result
---
Instruction(
    SubLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Var(
            ByteOffset {
                start: 9,
                end: 12,
            },
        ),
    ),
)
