aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__sub__tests__sub_reg_reg.snap
---
source: aya-assembly/src/parser/instructions/sub.rs
expression: result
---
Instruction(
    SubRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
